--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: go
 sudo: false
 go:
-  - 1.10
-  - 1.11
-  - tip
+  - '1.10'
+  - '1.11'
+  - 'tip'
 
 install:
   - go get -v github.com/paulmach/orb/...
